--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "cyz-home/home-toolset-php",
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "GoLang\\Parser\\": "golang-parser/src"
         }
     },
     "authors": [
@@ -13,6 +14,7 @@
     ],
     "require": {
         "symfony/console": "^5.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ctfang/proto-parser": "^0.0.1"
     }
 }
